### 2.30.0 ###
Fixed: Removed the "Description" custom field.
Added: "Data Sync" button in Settings to resolve data issues after updating to the latest version. If you encounter any data issues, please use the sync button.

### 2.20.0 ###
Fixed: TwentyTwentyFour theme design support added.


### 2.18.0 ###
Fixed: In this release, we have addressed an issue where the post content field was not updating correctly with the post meta key. This fix ensures that the post content field now accurately reflects the data from the post meta key.

### 2.17.2 ###
ADD: [latest_sermon per_page=10 order="ASC" orderby="post_modified"] New Shortcode
Fixed: itunes:explicit "false", first it says no (using W3C Feed link)

### 2.17.1.2 ###
Fixed: [sermon_images hide_title=”yes”] shortcode working
Fixed: PHP Warning with PHP 8.x

### 2.17.1.1 ###
Add: New Checkbox added for the support of http:// or https:// inside the enclosure URL under the Podcast tab in the settings menu.

### 2.17.1 ###
Fixed: Compability issues with PHP 8.x

### 2.17.0 ###
Fixed: Error when updating the content.
Fixed: PHP Error Unparenthesized.
Fixed: RSS feed not working with PHP 8.0.

### 2.16.9 ###
Fixed: Issues saving with PHP 8.0 WP 5.9.2
Fixed: PHP 8 error for twig and divi for sermon manager pro
Fixed: Fatal error (Cannot access offset of type string on string)
Fixed: Sermon series order list when using the shortcode
Fixed: Compability issues with latest WP 5.9.3
Fixed: Image size issue

### 2.16.8 ###
Fixed: Backend error (Service Type field)
Fixed: Fatal Error when adding new sermon on Version 2.16.7 Call to undefined function

### 2.16.7 ###
Fix: Single and mulitple file attachment available

### 2.16.6 ###
Fix: Old Missing PDF file data issue fixed

### 2.16.5 ###
Fix: Hyperlinks are Stripped in the Description Field 

### 2.16.4 ###
Fix: Support Multiple PDF File upload For Notes and Bulletins

### 2.163 ###