@@ -1,6 +1,7 @@
 ### 2.30.0 ###
 Fixed: Removed the "Description" custom field.
 Added: "Data Sync" button in Settings to resolve data issues after updating to the latest version. If you encounter any data issues, please use the sync button.
+Added: Option to enable or disable the Gutenberg Block Editor for sermons.
 
 ### 2.20.0 ###
 Fixed: TwentyTwentyFour theme design support added.
